# uc-analyzer

./: Cargo.toml  README.md
uc_analysis/: Cargo.toml
uc_analysis/src/: ambiguous_new_template.rs  ast.rs  dangling_else.rs  lib.rs  middle.rs  misleading_indentation.rs  missing_break.rs  never_loop.rs  uneffectful_stmt.rs
uc_analysis/src/ast/: ambiguous_new_template.rs  ambiguous_ternary_op.rs  dangling_else.rs  misleading_indentation.rs  missing_break.rs  never_loop.rs  uneffectful_stmt.rs
uc_analysis/src/middle/: bad_enum_values.rs  bad_type_name.rs  liveness.rs  loop_array_modification.rs  unreachable_code.rs
uc_analyzer/: Cargo.toml
uc_analyzer/src/: main.rs
uc_ast/: Cargo.toml
uc_ast/src/: lib.rs  visit.rs
uc_ast/src/pretty/: mod.rs  stmts.rs
uc_ast_lowering/: Cargo.toml
uc_ast_lowering/src/: body.rs  lib.rs  resolver.rs  stmts.rs
uc_def/: Cargo.toml
uc_def/src/: lib.rs  pretty.rs
uc_def/src/pretty/: expr.rs  mod.rs  stmts.rs
uc_files/: Cargo.toml
uc_files/src/: lib.rs
uc_middle/: Cargo.toml
uc_middle/src/: body.rs  lib.rs  ty.rs
uc_middle/src/body/: interp.rs
uc_middle/src/pretty/: mod.rs
uc_name/: Cargo.toml
uc_name/src/: lib.rs
uc_parser/: Cargo.toml
uc_parser/examples/: lex_all.rs  parse_all.rs
uc_parser/src/: arc_owned_chars.rs  lexer.rs  lib.rs  parser.rs  preprocessor.rs
uc_parser/src/lexer/: enums.rs
uc_parser/src/parser/: expr.rs  item.rs  modifiers.rs  stmt.rs
uc_parser/src/parser/expr/: test.rs
uc_session/: Cargo.toml
uc_session/src/: lib.rs
uc_types/: Cargo.toml
uc_types/src/: lib.rs
