[package]
name = "uc_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uc_analysis = { path = "../uc_analysis" }
uc_ast = { path = "../uc_ast" }
uc_files = { path = "../uc_files" }
uc_name = { path = "../uc_name" }
uc_parser = { path = "../uc_parser" }
