[package]
name = "uc_ast_lowering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uc_ast = { path = "../uc_ast" }
uc_def = { path = "../uc_def" }
uc_files = { path = "../uc_files" }
uc_middle = { path = "../uc_middle" }
uc_name = { path = "../uc_name" }
