[package]
name = "uc_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.22", features = ["derive"] }
unicase = "2.6.0"
uc_files = { path = "../uc_files" }

[dev-dependencies]
walkdir = "2"