[package]
name = "uc_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
once_cell = "1.8.0"
uc_name = { path = "../uc_name" }
uc_ast = { path = "../uc_ast" }
uc_def = { path = "../uc_def" }
uc_files = { path = "../uc_files" }


[dev-dependencies]
walkdir = "2"
uc_analysis = { path = "../uc_analysis" }